k8s/azure-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app:  the-pirate-way-app
