k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-pirate-way-service
spec:
  selector:
    app: the-pirate-way-app
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
