k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: the-pirate-way-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: yarrrrr.streaming
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: the-pirate-way-service
                port:
                  number: 8080
